too big, now fixing

--- a/ymg/stylenew.css
+++ b/ymg/stylenew.css
@@ -34,7 +34,7 @@ h2:visited {
 }
 h2:hover {
   color: #18D;
-  font-size: 30px;
+  font-size: 27px;
   background-color: none;
   text-decoration: none;
   transition: 0.1s;
